Upgrade to java 21 (#305)
* WIP java 21 virtual threads

* Trash ohShitFn

* Implement a lot more virutal threads

* These PMD errors? They're fineee

* Workflow files

* Don't start the virtual threads yet